simple refactoring in user management